Fix Sonar findings for S8692, S1854, and S2293 (#53)
* Apply Sonar fixes

* Fix Sonar Java issues

* Address DAO test review feedback

* Changes before error encountered

Agent-Logs-Url: https://github.com/wuwen5/xxl-job-lite/sessions/99284039-f208-4144-b410-7b39fe6d6353

* test: make cron expression calendars deterministic

* refactor: change AbstractTest and AbstractSpringMvcTest to abstract classes; update CronExpressionTest to use LocalDateTime

* refactor: replace integer month values with Month enum in CronExpressionTest

* refactor: remove unused variables and simplify callback handling in job log processing

* test: add setup method to clear job log before each test

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: wuwen <wuwen.55@aliyun.com>