@@ -1,27 +1,40 @@
 package com.xxl.job.admin.dao;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
 import com.xxl.job.admin.AbstractTest;
 import com.xxl.job.admin.core.model.XxlJobRegistry;
 import jakarta.annotation.Resource;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
 public class XxlJobRegistryDaoTest extends AbstractTest {
+    private static final Date FIXED_NOW = new Date(1_700_000_000_000L);
 
     @Resource
     private XxlJobRegistryDao xxlJobRegistryDao;
 
     @Test
     public void test() {
-        int ret = xxlJobRegistryDao.registryUpdate("g1", "k1", "v1", new Date());
+        int ret = xxlJobRegistryDao.registryUpdate("g1", "k1", "v1", FIXED_NOW);
         if (ret < 1) {
-            ret = xxlJobRegistryDao.registrySave("g1", "k1", "v1", new Date());
+            assertEquals(1, xxlJobRegistryDao.registrySave("g1", "k1", "v1", FIXED_NOW));
+        } else {
+            assertEquals(1, ret);
         }
 
-        List<XxlJobRegistry> list = xxlJobRegistryDao.findAll(1, new Date());
+        List<XxlJobRegistry> list = xxlJobRegistryDao.findAll(1, FIXED_NOW);
+        assertTrue(list.stream().anyMatch(item -> "v1".equals(item.getRegistryValue())));
 
-        int ret2 = xxlJobRegistryDao.removeDead(Arrays.asList(1));
+        Integer registryId = list.stream()
+                .filter(item -> "v1".equals(item.getRegistryValue()))
+                .map(XxlJobRegistry::getId)
+                .findFirst()
+                .orElseThrow();
+
+        int ret2 = xxlJobRegistryDao.removeDead(List.of(registryId));
+        assertEquals(1, ret2);
     }
 }
